--- a/index.html
+++ b/index.html
@@ -28,8 +28,57 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    <!-- Timeblocks -->
     <div class="container">
-      <!-- Timeblocks go here -->
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row" class="hour time-block">9AM</th>
+            <td class="w-80 row">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Mi ipsum faucibus vitae aliquet nec ullamcorper.</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">10AM</th>
+            <td class="w-80 row">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Mi ipsum faucibus vitae aliquet nec ullamcorper.</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">11AM</th>
+            <td class="w-80 row">Meeting/Appointment</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">12AM</th>
+            <td class="w-80 row">Meeting/Appointment</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">1PM</th>
+            <td class="w-80 row">Meeting/Appointment</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">2PM</th>
+            <td class="w-80 row">Meeting/Appointment</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">3PM</th>
+            <td class="w-80 row">Meeting/Appointment</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">4PM</th>
+            <td class="w-80 row">Meeting/Appointment</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+          <tr>
+            <th scope="row" class="hour time-block">5PM</th>
+            <td class="w-80 row">Meeting/Appointment</td>
+            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
