--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <source>
     <title>Work Day Scheduler</title>
   </head>
 
@@ -34,48 +35,52 @@
         <tbody>
           <tr>
             <th scope="row" class="hour time-block">9AM</th>
-            <td class="w-80 row">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Mi ipsum faucibus vitae aliquet nec ullamcorper.</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock">
+              <div class="input-group w-75" id="time9">
+                <textarea class="form-control" aria-label="With textarea">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</textarea>
+              </div>
+            </td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">10AM</th>
-            <td class="w-80 row">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Mi ipsum faucibus vitae aliquet nec ullamcorper.</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">11AM</th>
-            <td class="w-80 row">Meeting/Appointment</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time11">Meeting/Appointment</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">12AM</th>
-            <td class="w-80 row">Meeting/Appointment</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time12">Meeting/Appointment</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">1PM</th>
-            <td class="w-80 row">Meeting/Appointment</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time13">Meeting/Appointment</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">2PM</th>
-            <td class="w-80 row">Meeting/Appointment</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time14">Meeting/Appointment</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">3PM</th>
-            <td class="w-80 row">Meeting/Appointment</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time15">Meeting/Appointment</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">4PM</th>
-            <td class="w-80 row">Meeting/Appointment</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time16">Meeting/Appointment</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
           <tr>
             <th scope="row" class="hour time-block">5PM</th>
-            <td class="w-80 row">Meeting/Appointment</td>
-            <td class="text-center px-3 py-3 saveBtn"><i class="far fa-save "></i></td>
+            <td class="w-80 row eventblock" id="time17">Meeting/Appointment</td>
+            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
           </tr>
         </tbody>
       </table>
@@ -83,5 +88,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
