Add on click function for save button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <tr>
             <th scope="row" class="hour time-block">9AM</th>
             <td class="w-80 row eventblock">
-              <div class="input-group w-75" id="time9">
+              <div class="input-group" id="time9">
                 <textarea class="form-control" aria-label="With textarea">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</textarea>
               </div>
             </td>
