--- a/index.html
+++ b/index.html
@@ -30,60 +30,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <!-- Timeblocks -->
-    <div class="container">
-      <table class="table">
-        <tbody>
-          <tr>
-            <th scope="row" class="hour time-block">9AM</th>
-            <td class="w-80 row eventblock">
-              <div class="input-group" id="time9">
-                <textarea class="form-control" aria-label="With textarea">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</textarea>
-              </div>
-            </td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">10AM</th>
-            <td class="w-80 row eventblock" id="time10">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">11AM</th>
-            <td class="w-80 row eventblock" id="time11">Meeting/Appointment</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">12AM</th>
-            <td class="w-80 row eventblock" id="time12">Meeting/Appointment</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">1PM</th>
-            <td class="w-80 row eventblock" id="time13">Meeting/Appointment</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">2PM</th>
-            <td class="w-80 row eventblock" id="time14">Meeting/Appointment</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">3PM</th>
-            <td class="w-80 row eventblock" id="time15">Meeting/Appointment</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">4PM</th>
-            <td class="w-80 row eventblock" id="time16">Meeting/Appointment</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-          <tr>
-            <th scope="row" class="hour time-block">5PM</th>
-            <td class="w-80 row eventblock" id="time17">Meeting/Appointment</td>
-            <td class="text-center align-middle saveBtn border-0"><i class="far fa-save "></i></td>
-          </tr>
-        </tbody>
-      </table>
+    <div id="time-blocks" class="container">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
