--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <!-- Timeblocks -->
-    <div id="time-blocks" class="container">
-    </div>
+    <main id="time-blocks" class="container">
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
